# QmlMp3Player

./: CMakeLists.txt  Mp3Player.pro
resources/: qml.qrc
resources/views/: ControlComponent.qml  ImageButton.qml  PlaylistComponent.qml  main.qml
src/: ControlModel.cpp  ControlModel.h  PlaylistItem.cpp  PlaylistItem.h  PlaylistModel.cpp  PlaylistModel.h  RootContext.cpp  RootContext.h  SongInfoReaderThread.cpp  SongInfoReaderThread.h  main.cpp
